<resources>
    <string name="app_name">Tengerium</string>
    <string name="action_settings">Settings</string>
    <string name="profile_title">Profile</string>
    <string name="nickname_hint">Nickname</string>
    <string name="update_nickname">Update Nickname</string>
    <string name="logout">Logout</string>
    <string name="status_settings">Status Settings</string>
    <string name="app_settings">App Settings</string>
    <string name="online">Online</string>
    <string name="busy">Busy</string>
    <string name="away">Away</string>
    <string name="offline">Offline</string>
    <string name="brb">Be Right Back</string>
    <string name="on_phone">On the Phone</string>
    <string name="out_to_lunch">Out to Lunch</string>
    <string name="theme_settings">Theme</string>
    <string name="language_settings">Language</string>
    <string name="notifications">Notifications</string>
    <string name="nickname_updated">Nickname updated</string>
    <string name="avatar_updated">Avatar updated</string>
    <string name="default_android_style">Android Standard Style</string>
    <string name="use_material_you">Use Material You (Android 12+)</string>
    <string name="theme_presets">Theme Presets</string>
    <string name="preview">Preview</string>
    <string name="choose_background">Choose Chat Background</string>
    <string name="enable_debug_popups">Enable debug popups</string>
    <string name="language">Language</string>
    <string name="current_language">Change Language</string>
    <string name="background_updated">Background updated</string>
    <string name="background_removed">Background removed</string>
    <string name="theme_standard">Standard</string>
    <string name="theme_turquoise">Turquoise</string>
    <string name="preview_incoming">Incoming message bubble</string>
    <string name="preview_outgoing">Outgoing message bubble</string>
    <string name="theme">Theme</string>
    <string name="hotmail_account_hint">Hotmail Account</string>
    <string name="password_hint">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">Sign In</string>
    <string name="fill_all_fields">Please fill all fields</string>
    <string name="logged_in_as">Logged in as %1$s</string>
    <string name="login_error">Error: %1$s</string>
    <string name="error_invalid_password">Invalid password</string>
    <string name="error_connection_failed">Failed to connect to MSN service</string>
    <string name="session_expired_title">Session Expired</string>
    <string name="session_expired_message">Your session has expired. Please sign in again.</string>
    <string name="connection_settings">Connection Settings</string>
    <string name="settings_saved">Settings saved</string>
    <string name="connecting">Connecting...</string>
    <string name="connecting_to_msn">Connecting to MSN...</string>
    <string name="host_hint">Host (e.g. messenger.hotmail.com)</string>
    <string name="nexus_hint">Nexus Domain (e.g. m1.escargot.chat)</string>
    <string name="error_missing_server_settings">Please fill in server settings first</string>
    <string name="reconnect">Reconnect</string>
    <string name="connection_lost">Connection lost</string>
    <string name="reconnecting_in">Reconnecting in %1$d seconds...</string>
    <string name="no_internet">No internet connection</string>
    <string name="close_app">Close Application</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="copy">Copy</string>
    <string name="copied">Copied</string>
    <string name="type_message">Type a message...</string>
    <string name="empty_chats">No recent chats</string>
    <string name="empty_chats_title">No messages yet</string>
    <string name="empty_chats_message">Start a conversation with one of your contacts!</string>
    <string name="error_decrypting">Error decrypting</string>
    <string name="not_in_contacts">This person is not in your contacts</string>
    <string name="add_to_contacts">Add to contacts</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="contact_unavailable">The contact is unavailable</string>
    <string name="is_typing">is typing...</string>
    <string name="send_nudge">Send Nudge</string>
    <string name="send_nudge_cooldown">Nudge (%1$ds)</string>
    <string name="nudge_received">Received a nudge!</string>
    <string name="nudge_sent_sys">You have sent a nudge!</string>
    <string name="nudge_received_sys">%1$s has sent you a nudge!</string>
    <string name="add_participant">Add Participant</string>
    <string name="group_chat">Group Chat</string>
    <string name="user_joined_chat">%1$s joined the chat</string>
    <string name="user_left_chat">%1$s left the chat</string>
    <string name="no_available_contacts">No available contacts</string>
    <string name="reply">Reply</string>
    <string name="type_reply">Type a reply...</string>
    <string name="send_by_enter">Send by Enter</string>
    <string name="link_preview">Link Preview</string>
    <string name="open_chats_by_default">Open chats by default</string>
    <string name="chat_header">Chat</string>
    <string name="export_chat_history">Export Chat History</string>
    <string name="export_success">Chat history exported successfully</string>
    <string name="export_error">Failed to export chat history</string>
    <string name="disable_message_queue">Disable pending message queue</string>
    <string name="disable_message_queue_desc">If enabled, you can only send messages to online users. Messages will fail if connection is not ready.</string>
    <string name="messaging_unavailable">Messaging unavailable!</string>
    <string name="resend">Resend</string>
    <string name="chat_me_prefix">Me: %1$s</string>
    <string name="group_participants_updated">Participants list updated</string>
    <string name="pin_chat">Pin</string>
    <string name="unpin_chat">Unpin</string>
    <string name="mute_notifications">Mute Notifications</string>
    <string name="unmute_notifications">Unmute Notifications</string>
    <string name="blocked_group_name">Blocked</string>
    <string name="add_to_folder">Add to folder</string>
    <string name="move_to_folder">Move to folder</string>
    <string name="select_folder">Select folder</string>
    <string name="remove_from_folder">Remove from folder</string>
    <string name="add_friend">Add Friend</string>
    <string name="enter_msn_account">Enter MSN account:</string>
    <string name="add">Add</string>
    <string name="contacts_settings">Contact Settings</string>
    <string name="show_online_first">Show online first</string>
    <string name="empty_contacts_title">It\'s quiet here...</string>
    <string name="empty_contacts_message">No contacts yet. Use the \"+\" button to add your first friend!</string>
    <string name="not_connected_message">You are not logged in.</string>
    <string name="contact_requests">Contact Requests</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="new_contact_request">%1$s wants to add you to their contacts</string>
    <string name="delete">Delete</string>
    <string name="no_requests">No pending requests</string>
    <string name="search">Search</string>
    <string name="press_to_add">User found, press to add</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="other_contacts">Other Contacts</string>
    <string name="group_count_format">(%1$d/%2$d)</string>
    <string name="create_group">Create Group</string>
    <string name="delete_group">Delete Group</string>
    <string name="delete_group_confirm">Are you sure you want to delete this group?</string>
    <string name="no_groups_error">No groups available. Create one first.</string>
    <string name="contact_guid_error">Error: Contact GUID not found. Try reconnecting.</string>
    <string name="move_to_group_title">Move %1$s to group</string>
    <string name="user_is_now_online">%1$s is now online</string>
    <string name="tab_contacts">Contacts</string>
    <string name="tab_chats">Chats</string>
    <string name="tab_services">Services</string>
    <string name="tab_profile">Profile</string>
    <string name="contact_info">Contact Info</string>
    <string name="email">Email</string>
    <string name="privacy">Privacy</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="personal_message_hint">Personal message (status)</string>
    <string name="save_error">Save error: %1$s</string>
    <string name="saved_to_downloads">Saved to Downloads</string>
    <string name="download">Download</string>
    <string name="chat_settings">Chat Settings</string>
    <string name="avatar_library">Avatar Library</string>
    <string name="about_app">About App</string>
    <string name="app_info_full_format">%1$s (%2$s) • %3$s v%4$s</string>
    <string name="app_version_details_format">%1$s • %2$s v%3$s</string>
    <string name="about_description">An open-source client for the MSN Messenger server, designed for communication on modern devices.</string>
    <string name="about_library_title">Libraries used:</string>
    <string name="about_library_name">MSNP-11 library by campos02</string>
    <string name="about_testers_title">Active testers:</string>
    <string name="about_testers_list">probreakvs, inceptiontime, campos</string>
    <string name="about_developed_by">Developed by Vasek Lednikofff</string>
    <string name="about_limpe_support">supported by Limpe Team</string>
    <string name="telegram">Telegram</string>
    <string name="data_and_storage">Data and Storage</string>
    <string name="memory_usage">Memory Usage</string>
    <string name="traffic_usage">Traffic Usage</string>
    <string name="storage">Storage</string>
    <string name="storage_usage">Storage Usage</string>
    <string name="app_memory_percent">App takes %1$s%% of device memory (%2$s)</string>
    <string name="cache_label">Cache (avatars, previews): %1$s</string>
    <string name="messages_label">Message History: %1$s</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="clear_history">Clear Message Logs</string>
    <string name="clear_history_title">Clear History?</string>
    <string name="clear_history_message">This will permanently delete all your messages from all chats.</string>
    <string name="cache_cleared">Cache cleared</string>
    <string name="history_cleared">History cleared</string>
    <string name="cache_label_size">Cache: %1$s</string>
    <string name="messages_label_size">History: %1$s</string>
    <string name="total_storage_usage">Total usage: %1$s</string>
    <string name="tengerium_usage_format">Tengerium takes %1$d%% of apps cache volume</string>
    <string name="storage_profiles">Profiles Photos</string>
    <string name="storage_messages">Chat Logs</string>
    <string name="storage_avatars">Avatar Library</string>
    <string name="storage_contacts">Contact List</string>
    <string name="oobe_welcome_title">Let\'s get started!</string>
    <string name="oobe_welcome_description">Free and open source client for MSN Messenger</string>
    <string name="oobe_welcome_question">Will you start using it right now?</string>
    <string name="oobe_permissions_title">Permissions</string>
    <string name="oobe_permissions_description">We need some permissions to provide the best experience.</string>
    <string name="stay">Stay</string>
    <string name="next">Next</string>
    <string name="deep_link_warning_title">Warning: Custom Server!</string>
    <string name="deep_link_warning_message">This link is trying to change server settings to:\n\nServer: %1$s\nNexus: %2$s\n\nUsing third-party servers can be DANGEROUS. The server owner might see your password and intercept your messages. Are you sure you trust this server?</string>
</resources>